<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintVertical_bias="0.97" android:id="@+id/textView"/>
    <ImageView
            android:layout_width="297dp"
            android:layout_height="177dp" app:srcCompat="@drawable/plantiful"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="212dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:contentDescription="@string/logo" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/boton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="123dp"
            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="147dp" android:layout_marginStart="147dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="149dp"
            android:layout_marginRight="149dp"
            android:onClick="onClick_Menu"/>
    <Button
            android:text="@string/boton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" android:layout_marginBottom="43dp"
            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="147dp" android:layout_marginStart="147dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="149dp"
            android:layout_marginRight="149dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:onClick="onClick_Pedido"/>

</android.support.constraint.ConstraintLayout>