<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.OrderActivity">

    <TextView
            android:text="@string/titulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="162dp" android:layout_marginStart="162dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp" android:layout_marginBottom="476dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ListView
            android:id="@+id/listview_2"
            android:layout_width="315dp"
            android:layout_height="285dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp" android:layout_marginBottom="164dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <Button
            android:text="@string/Clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" app:layout_constraintEnd_toStartOf="@+id/button8"
            android:layout_marginEnd="40dp" android:layout_marginRight="40dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/listview_2"/>
    <Button
            android:text="@string/Shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8" android:layout_marginEnd="27dp" android:layout_marginRight="27dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/button7"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/listview_2"/>
    <Button
            android:text="@string/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp" app:layout_constraintTop_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="148dp" android:layout_marginStart="148dp"
            android:onClick="onClick_Home"/>
</android.support.constraint.ConstraintLayout>